--- a/second.html
+++ b/second.html
@@ -36,7 +36,7 @@
 	</div>
 </header>
 		<main class="page">
-			<second class="tarif">
+			<section class="tarif">
 				<div class="tarif__container">
 					<div class="tarif__content">
 						<h1 class="tarif__title _title">Тарифы<br> на <span>проверку</span></h1>
@@ -49,7 +49,7 @@
 						<picture><source srcset="img/03.webp"type="image/webp"><img src="img/03.jpg" alt="image"></picture>
 					</div>
 				</div>
-			</second>
+			</section>
 			<div class="tabs">
 				<div class="tabs__container">
 					<nav class="tabs__control">
@@ -344,7 +344,7 @@
 				</div>
 			</div>
 	</div>
-	<second class="know">
+	<section class="know">
 		<div class="know__container">
 			<h2 class="know__title _title">Важно знать <span>об этом!</span></h2>
 			<div class="know__body">
@@ -361,7 +361,7 @@
 				</div>
 			</div>
 		</div>
-	</second>
+	</section>
 	<section class="spollers">
 	<div class="spollers__container">
 		<h2 class="spollers__title _title">Частые вопросы</h2>
