--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css?_v=20220124015446" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20220124015446">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="css/style.min.css">
 	<title>@advoproverkа</title>
 </head>
 
@@ -58,7 +58,7 @@
 							</div>
 						</div>
 						<div class="home__image">
-							<picture><source srcset="img/home/01.webp"type="image/webp"><img src="img/home/01.jpg" alt="image"></picture>
+							<img src="img/home/01.jpg" alt="image">
 						</div>
 					</div>
 				</div>
@@ -175,7 +175,7 @@
 					<div class="check__wrapper">
 						<div class="check__box">
 							<div class="check__img">
-								<picture><source srcset="img/01.webp"type="image/webp"><img src="img/01.jpg" alt="image"></picture>
+								<img src="img/01.jpg" alt="image">
 							</div>
 							<a href="second.html" class="check__button btn">Бесплатно проверить</a>
 						</div>
@@ -430,7 +430,6 @@
 
 		</div>
 	</div>
-	</div>
 </section>
 			<section class="form">
 				<div class="form__container">
@@ -455,7 +454,7 @@
 							<button class="form__button btn" type="submit">Проверить бесплатно</button>
 						</form>
 						<div class="form__image">
-							<picture><source srcset="img/02.webp"type="image/webp"><img src="img/02.jpg" alt="image"></picture>
+							<img src="img/02.jpg" alt="image">
 						</div>
 					</div>
 				</div>
@@ -513,7 +512,7 @@
 	</div>
 </div>
 	</div>
-	<script src="js/app.min.js?_v=20220124015446"></script>
+	<script src="js/app.min.js"></script>
 </body>
 
 </html>
