--- a/second.html
+++ b/second.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css?_v=20220124023932" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20220124023932">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="css/style.min.css">
 	<title>Second</title>
 </head>
 
@@ -46,7 +46,7 @@
 						<a href="#" class="tarif__button btn">Вопросы</a>
 					</div>
 					<div class="tarif__img">
-						<picture><source srcset="img/03.webp"type="image/webp"><img src="img/03.jpg" alt="image"></picture>
+						<img src="img/03.jpg" alt="image">
 					</div>
 				</div>
 			</section>
@@ -348,7 +348,7 @@
 					<h2 class="know__title _title">Важно знать <span>об этом!</span></h2>
 					<div class="know__body">
 						<div class="know__img">
-							<picture><source srcset="img/04.webp"type="image/webp"><img src="img/04.jpg" alt="image"></picture>
+							<img src="img/04.jpg" alt="image">
 						</div>
 						<div class="know__text">
 							<p>Все данные предоставляются по информации, имеющейся в государственных электронных базах судебных
@@ -423,7 +423,6 @@
 
 		</div>
 	</div>
-	</div>
 </section>
 		</main>
 		<footer class="footer">
@@ -478,7 +477,7 @@
 	</div>
 </div>
 	</div>
-	<script src="js/app.min.js?_v=20220124023932"></script>
+	<script src="js/app.min.js"></script>
 </body>
 
 </html>
